<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="Theme and language"
        app:allowDividerBelow="true">

        <rikka.material.preference.MaterialSwitchPreference
            android:title="@string/dark_mode"
            android:icon="@drawable/ic_darkmode"
            app:switchTextOff="out"
            app:switchTextOn="on"
            android:key="nightDay"/>
        <Preference
            android:title="@string/ac"
            android:icon="@drawable/ic_color"
            android:key="color"/>
        <Preference
            android:icon="@drawable/ic_language"
            android:title="@string/lang"
            android:key="language"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="Update"
        app:allowDividerBelow="true">
        <Preference
            android:title="@string/updater"
            android:icon="@drawable/ic_update"
            android:key="updateCheck"
            android:summary="@string/updatesum"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="Help me with this app"
        app:allowDividerBelow="true">
        <Preference
            android:title="@string/bugtit"
            android:summary="@string/bugmess"
            android:icon="@drawable/ic_bug"
            android:key="reportBug"/>
        <Preference
            android:title="@string/feasugTit"
            android:summary="@string/feasmess"
            android:key="feature"
            android:icon="@drawable/ic_feauture"/>
        <Preference
            android:title="@string/share"
            android:icon="@drawable/ic_share"
            android:summary="@string/sharemess"
            android:key="share"/>
        <Preference
            android:title="@string/feedback"
            android:icon="@drawable/ic_feedback"
            android:summary="@string/feasmess"
            android:key="feedback"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="Privacy and Licenses"
        app:allowDividerBelow="true">
        <Preference
            android:title="@string/app_permissions"
            android:icon="@drawable/ic_app_permission"
            android:summary="@string/permmess"
            android:key="permission"/>
        <Preference
            android:title="@string/privacy_policy"
            android:icon="@drawable/ic_privacy_user"
            android:summary="@string/ppmess"
            android:key="policy"/>
        <Preference
            android:title="@string/License"
            android:icon="@drawable/ic_l"
            android:summary="@string/licmess"
            android:key="license"
            android:enabled="false"/>
    </PreferenceCategory>
</PreferenceScreen>


<!--ToDo: Subtitles = Whatever is set-->