<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/samsungdesignAb"
        android:icon="@drawable/ic_design"
        android:title="@string/samsung_design"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/allAb"
        android:icon="@drawable/all"
        android:title="@string/all_quotes"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/peopleAb"
        android:icon="@drawable/people"
        android:title="@string/persons"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/ecAb"
        android:icon="@drawable/ec"
        android:title="@string/editors_choice"
        app:showAsAction="ifRoom"/>
</menu>