<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/background">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="26dp"
        android:backgroundTint="?attr/colorSecondaryContainer">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/language"
            android:fontFamily="@font/alef"
            android:textColor="?android:textColorPrimary"
            android:textSize="30sp"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="26dp"
        app:cardUseCompatPadding="true"
        android:backgroundTint="?attr/colorSecondaryContainer">

        <androidx.core.widget.NestedScrollView
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView

                    android:id="@+id/deutsch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardUseCompatPadding="true"
                    app:cardCornerRadius="26dp">

                    <TextView
                        android:id="@+id/deutschText"
                        android:background="?attr/colorPrimaryInverse"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alef"
                        android:textColor="?android:textColorPrimary"
                        android:text="@string/deutsch"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:paddingVertical="10dp"/>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/english"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardUseCompatPadding="true"
                    app:cardCornerRadius="26dp">

                    <TextView
                        android:id="@+id/englishText"
                        android:background="?attr/colorPrimaryInverse"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alef"
                        android:textColor="?android:textColorPrimary"
                        android:text="@string/english"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:paddingVertical="10dp"/>

                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.cardview.widget.CardView>



</LinearLayout>