<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/bottom_sheet_bg">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/palanquin_dark_bold"
        android:gravity="center"
        android:text="@string/options"
        android:textColor="?android:textColorPrimary"
        android:textSize="30sp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp">
    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardContainer"
        app:cardUseCompatPadding="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="26dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/quote_background_ec">

            <ImageView
                android:id="@+id/quotationMark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/quotation_mark"
                tools:ignore="ContentDescription" />
            <TextView
                android:id="@+id/quotet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/quotationMark"
                android:layout_alignStart="@+id/quotationMark"
                android:layout_marginStart="35dp"
                android:layout_marginTop="-10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:text=""
                android:textColor="?android:textColorPrimary"
                android:textSize="25sp"
                android:ellipsize="end"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/authort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/quotet"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="-2dp"
                android:layout_marginEnd="45dp"
                android:paddingBottom="10dp"
                android:text=""
                android:textColor="?android:textColorPrimary" />


        </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="26dp"
        android:id="@+id/copyText"
        app:cardUseCompatPadding="true"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/copy_quote" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/shareText"
        app:cardCornerRadius="26dp"
        app:cardUseCompatPadding="true"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/share_quote" />

    </com.google.android.material.card.MaterialCardView>



</LinearLayout>